# microsoft-agent-module

./: .gitignore  ALL_BUILD.vcxproj.filters  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  msagent.vcxproj.filters  setup.bat  setup_amd64.bat
gmod-module-base/: ALL_BUILD.vcxproj.filters  cmake_install.cmake
gmod-module-base/examples/HelloWorld/: HelloWorld.vcxproj.filters  cmake_install.cmake
gmod-module-base/examples/MetaTable/: MetaTable.vcxproj.filters  cmake_install.cmake
gmod-module-base/include/: cmake_install.cmake
src/: agent.cpp  agent.h  lua_api.cpp  main.cpp
